# syswatch

./: Cargo.toml  Dockerfile  README.md  config.toml
debian/: service
src/: main.rs  metrics.rs  nvml_metrics.rs  utils.rs
