[package]
name = "syswatch"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
anyhow = "1.0"
nvml-wrapper = { version = "0.9", features = ["legacy-functions"] }
# sysinfo = "0.28"
thiserror = "1.0"
clap = { version = "4.2.1", features = ["derive"] }
users = "0.11"
whitespace-conf = "1.0"
humansize = "2.1"
#libc = "0.2.141"
procfs = "0.15"
env_logger = "0.10"
actix-web = "4"
prometheus-client = "0.20"
platform-info = "1.0.2"
reqwest = "0.11.16"
tokio = { version = "1.27", features = ["full"]}
toml = "0.7.3"
serde = { version = "1.0", features = ["derive"] }
tracing = "0.1"
tracing-subscriber = "0.3"

[profile.release]
lto = true
strip = true
codegen-units = 1

[package.metadata.deb]
maintainer = "***REMOVED***"
copyright = "2022, ***REMOVED***"
extended-description = """A prometheus client which exposes real-time metrics of nvidia cards and disk usages."""
depends = "prometheus-node-exporter"
section = "utility"
priority = "optional"
assets = [
    ["target/release/syswatch", "usr/local/bin/syswatch", "755"]
]
maintainer-scripts = "debian/"
systemd-units = [
    { unit-name = "prometheus-syswatch", enable = true }
]